crates/compiler/tests/parse_errors/type_ann.elm
module Main exposing (..)

x : 
x = 1
